--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,10 @@
             <version>2.16.0</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.32</version>
+        </dependency>
     </dependencies>
 </project>
